[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icuk-wrapper"
version = "0.0.1"
authors = [
  { name="Cameron Fleming", email="cameron@nevexo.space" },
]
description = "An API wrapper for the icuk.net API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Nevexo/icuk-wrapper"
"Bug Tracker" = "https://github.com/Nevexo/icuk-wrapper/issues"